# hsf_train

./: .gitignore  README.md  finetune.py  main.py  pyproject.toml  requirements.txt
conf/: config.yaml
conf/datasets/: all.yaml  custom_dataset.yaml
conf/finetuning/: default.yaml
conf/lightning/: default.yaml
conf/models/: default.yaml
hsftrain/: callbacks.py  exporter.py  utils.py
hsftrain/data/: dataloader.py  loader.py
hsftrain/models/: blocks.py  helpers.py  losses.py  models.py  optimizer.py  scheduler.py
scripts/: ckpt_to_onnx.py
sparseml/: finetuning.yaml  recipe.yaml
