[tool.poetry]
name = "HSFTrainer"
version = "0.1.0"
description = "Training DL segmentation models of HSF using Bagging strategies"
license = "MIT"
readme = "README.md"
authors = ["Clément POIRET <poiret.clement@outlook.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
torchio = "^0.19.0"
lightning = "^2.1.0"
hydra-core = "^1.3.0"
wandb = "^0.16.0"
pymia = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
bandit = "^1.7.0"
pylama = "^8.4.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
